fix: align login

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -27,9 +27,13 @@ a:hover {
 body {
     margin: 0;
     display: flex;
-    place-items: center;
-    min-width: 320px;
+    /* place-items: center; */
+    min-width: 100vw;
     min-height: 100vh;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
